# time_zone_picker

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  tz.h  world_clock.c  world_clock.h
src/ui/: icons.h  ui.c  ui.h
